border style for search section

--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -3,8 +3,13 @@ body {
 }
 .search-section{
     top: 0;
-    background-color: #a8bdc8;
     padding: 0;
+    border-color: #a8bdc8;
+    border-width: 2px;
+    border-bottom-style: solid;
+    border-top-style: none;
+    border-left-style: none;
+    border-right-style: none;
 }
 .logo{
     width: 100px;
@@ -12,7 +17,12 @@ body {
 .search-box{
     width: 40vw;
     height: 39px;
+    border-bottom-style: none;
+    border-top-style: none;
+    border-left-style: solid;
+    border-right-style: none;
     border-color: #a8bdc8;
+    border-width: 2px;
     margin: 0;
 }
 .search-button{
