--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -1,36 +1,13 @@
-body {
-
-}
-form {
-  display: inline-block;
-}
-.search-section{
-    top: 0;
-    padding: 0;
-    border-color: #a8bdc8;
-    border-width: 2px;
-    border-bottom-style: none;
-    border-top-style: none;
-    border-left-style: none;
-    border-right-style: none;
-}
-
 .logo{
-    width: 100px;
+    max-width: 25%;
+    margin-right: 10px;
 }
 .search-box{
-    width: 35vw;
-    height: 39px;
-    border-bottom-style: solid;
-    border-top-style: solid;
-    border-left-style: solid;
-    border-right-style: solid;
-    border-color: #a8bdc8;
-    border-width: 2px;
-    margin: 0;
+    max-width:100%;
+    max-height:100%;
 }
-.search-button{
-    border-radius: 0;
+.search-button {
+    margin-left: 10px;
 }
 #search-page .paper-list{
     background-color: #d5e2e8;
@@ -40,7 +17,7 @@ form {
     list-style-type: none;
     padding: 0;
 }
-#search-page .paper-list-item{
+#search-page .paper-list-item {
     background-color: #b5cad5;
     border-radius: 0;
     border-color: #b5cad5;
