--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -34,3 +34,14 @@
 #search-page .paper-list-item p{
     margin: 0;
 }
+
+.doc-annotations {
+    width: 100%;
+    height: 100%;
+    margin-top: 5px;
+}
+
+.paper-metadata {
+    width: 100%;
+    padding: 7px;
+}
