Basic section level view done

--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -46,6 +46,12 @@
     padding: 7px;
 }
 
+.section-content {
+    width: 100%;
+    padding: 7px;
+    margin-top: 10px;
+}
+
 .annotation-type-form {
     padding-top: 10px;
 }
