--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -84,18 +84,24 @@
 
 .comments {
     border-width: 0px;
+    /*background-color: #fbb4ae;*/
     background-color: #dc3545;
     color: #ffffff;
+    /*color: #000000;*/
 }
 
 .questions {
     border-width: 0px;
+    /*background-color: #ccebc5;*/
     background-color: #28a745;
     color: #ffffff;
+    /*color: #000000;*/
 }
 
 .supplementary {
     border-width: 0px;
+    /*background-color: #decbe4;*/
     background-color: #17a2b8;
     color: #ffffff;
+    /*color: #000000;*/
 }
