--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -81,7 +81,8 @@
 .comments {
     border-width: 0px;
     /*background-color: #fbb4ae;*/
-    background-color: #dc3545;
+    /*background-color: #dc3545;*/
+    background-color: #E7A954;
     color: #ffffff;
     /*color: #000000;*/
 }
@@ -89,7 +90,8 @@
 .questions {
     border-width: 0px;
     /*background-color: #ccebc5;*/
-    background-color: #28a745;
+    /*background-color: #28a745;*/
+     background-color: #A884CC;
     color: #ffffff;
     /*color: #000000;*/
 }
@@ -97,7 +99,8 @@
 .supplementary {
     border-width: 0px;
     /*background-color: #decbe4;*/
-    background-color: #17a2b8;
+    /*background-color: #17a2b8;*/
+    background-color: #468499;
     color: #ffffff;
     /*color: #000000;*/
 }
